docs/api/qiskit/0.24/qiskit.circuit.Measure.mdx
---
title: Measure
description: API reference for qiskit.circuit.Measure
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.Measure
---

<span id="qiskit-circuit-measure" />

# qiskit.circuit.Measure

<Class id="qiskit.circuit.Measure" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/circuit/measure.py" signature="Measure">
  Quantum measurement in the computational basis.

  Create new measurement instruction.

  ### \_\_init\_\_

  <Function id="qiskit.circuit.Measure.__init__" name="__init__" signature="__init__()">
    Create new measurement instruction.
  </Function>

  ## Methods

  |                                                                                                                                 |                                                                          |
  | ------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.circuit.Measure.__init__ "qiskit.circuit.Measure.__init__")()                                              | Create new measurement instruction.                                      |
  | [`add_decomposition`](#qiskit.circuit.Measure.add_decomposition "qiskit.circuit.Measure.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.circuit.Measure.assemble "qiskit.circuit.Measure.assemble")()                                              | Assemble a QasmQobjInstruction                                           |
  | [`broadcast_arguments`](#qiskit.circuit.Measure.broadcast_arguments "qiskit.circuit.Measure.broadcast_arguments")(qargs, cargs) | Validation of the arguments.                                             |
  | [`c_if`](#qiskit.circuit.Measure.c_if "qiskit.circuit.Measure.c_if")(classical, val)                                            | Add classical condition on register classical and value val.             |
  | [`copy`](#qiskit.circuit.Measure.copy "qiskit.circuit.Measure.copy")(\[name])                                                   | Copy of the instruction.                                                 |
  | [`inverse`](#qiskit.circuit.Measure.inverse "qiskit.circuit.Measure.inverse")()                                                 | Invert this instruction.                                                 |
  | [`is_parameterized`](#qiskit.circuit.Measure.is_parameterized "qiskit.circuit.Measure.is_parameterized")()                      | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.circuit.Measure.mirror "qiskit.circuit.Measure.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`qasm`](#qiskit.circuit.Measure.qasm "qiskit.circuit.Measure.qasm")()                                                          | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.circuit.Measure.repeat "qiskit.circuit.Measure.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.circuit.Measure.reverse_ops "qiskit.circuit.Measure.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.      |
  | [`validate_parameter`](#qiskit.circuit.Measure.validate_parameter "qiskit.circuit.Measure.validate_parameter")(parameter)       | Instruction parameters has no validation or normalization.               |

  ## Attributes

  |                                                                                                    |                                                                               |
  | -------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.circuit.Measure.decompositions "qiskit.circuit.Measure.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.circuit.Measure.definition "qiskit.circuit.Measure.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.circuit.Measure.duration "qiskit.circuit.Measure.duration")                   | Get the duration.                                                             |
  | [`params`](#qiskit.circuit.Measure.params "qiskit.circuit.Measure.params")                         | return instruction params.                                                    |
  | [`unit`](#qiskit.circuit.Measure.unit "qiskit.circuit.Measure.unit")                               | Get the time unit of duration.                                                |

  ### add\_decomposition

  <Function id="qiskit.circuit.Measure.add_decomposition" name="add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.circuit.Measure.assemble" name="assemble" signature="assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.Measure.broadcast_arguments" name="broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.circuit.Measure.c_if" name="c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### copy

  <Function id="qiskit.circuit.Measure.copy" name="copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Function id="qiskit.circuit.Measure.decompositions" name="decompositions" signature="property decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Function>

  ### definition

  <Function id="qiskit.circuit.Measure.definition" name="definition" signature="property definition">
    Return definition in terms of other basic gates.
  </Function>

  ### duration

  <Function id="qiskit.circuit.Measure.duration" name="duration" signature="property duration">
    Get the duration.
  </Function>

  ### inverse

  <Function id="qiskit.circuit.Measure.inverse" name="inverse" signature="inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.Measure.is_parameterized" name="is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### mirror

  <Function id="qiskit.circuit.Measure.mirror" name="mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Function id="qiskit.circuit.Measure.params" name="params" signature="property params">
    return instruction params.
  </Function>

  ### qasm

  <Function id="qiskit.circuit.Measure.qasm" name="qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.circuit.Measure.repeat" name="repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.Measure.reverse_ops" name="reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### unit

  <Function id="qiskit.circuit.Measure.unit" name="unit" signature="property unit">
    Get the time unit of duration.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.circuit.Measure.validate_parameter" name="validate_parameter" signature="validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>
</Class>

